Fixing some spacing again

--- a/css/404.css
+++ b/css/404.css
@@ -9,7 +9,7 @@ h1 {
   text-align: center;
   font-size: 9em;
   margin-left: -3rem;
-  letter-spacing: -5px;
+  letter-spacing: -.5rem;
   font-weight: 300;
   text-shadow: rgb(192, 143, 79) 1px 1px,
     rgb(192, 143, 79) 2px 2px,
